# dccon2signal

./: .gitignore  README.md  pyproject.toml
apng-encoder/: Cargo.toml
apng-encoder/src/: main.rs
deploy/: dccon2signal-bot.env.example  dccon2signal-bot.service
docs/superpowers/plans/: 2026-05-16-dccon2signal-implementation.md  2026-05-16-dccon2signal-telegram-bot.md
docs/superpowers/specs/: 2026-05-16-dccon-to-signal-sticker-design.md  2026-05-16-dccon2signal-telegram-bot-design.md  2026-05-23-animated-apng-external-encoder-design.md
src/dccon2signal/: __main__.py  apng_encoder.py  auth.py  cli.py  downloader.py  image_proc.py  models.py  pack_builder.py  persistence.py  pipeline.py  scraper.py  uploader.py
src/dccon2signal_bot/: __main__.py  config.py  handlers.py  queue.py  reporter.py  status.py  worker.py
tests/: conftest.py  test_auth.py  test_cli.py  test_downloader.py  test_image_proc.py  test_models.py  test_pack_builder.py  test_persistence.py  test_pipeline.py  test_scraper.py
tests/bot/: conftest.py  test_config.py  test_handlers.py  test_queue.py  test_reporter.py  test_status.py  test_worker.py
tests/fixtures/: package_detail_170660.json
