[project]
name = "dccon2signal"
version = "0.1.0"
description = "Convert DCInside DCcon packages to Signal sticker packs"
requires-python = ">=3.12"
dependencies = [
    # signalstickers-client 3.3.0 pins httpx<=0.24.1, so we follow that ceiling.
    "httpx>=0.24,<0.25",
    "pillow>=10.3",
    "signalstickers-client>=3.3",
    "click>=8.1",
]

[project.scripts]
dccon2signal = "dccon2signal.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dccon2signal"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/dccon2signal/models.py", "src/dccon2signal/scraper.py", "src/dccon2signal/image_proc.py", "src/dccon2signal/pack_builder.py", "src/dccon2signal/persistence.py"]

[[tool.mypy.overrides]]
module = "signalstickers_client.*"
ignore_missing_imports = true
